header tranform to upper case change color to dark grey add letter spacing to header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,8 +31,15 @@ header {
 
 }
 
+header a {
+    text-decoration: none;
+    color: inherit;
+}
 h1 {
     font-family: 'oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #25252525;
 
 }
 /* Main content */
