--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,5 +119,20 @@ padding-left: 1rem;
     display: none;
 }
 
+#logo {
 
+    font-size: 280%;
+    line-height: 75px;
+    margin: 0 0.5rem;
+
+}
+
+/* Main content */
+
+main {
+
+    /* Push content down to accomodate larger header */
+    margin-top: 79px;
+    
+}
 }
