--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,57 +88,60 @@ main {
 }
 
 /* Footer */
-footer {
-  background-color: orange;
+#social-networks {
+  text-align: center;
+  padding: 20px 0;
+  display: flex;
+  justify-content: space-evenly;
+  list-style-type: none;
 }
+
+#social-networks i {
+  font-size: 160%;
+  padding: 5%;
+  color: #3a3a3a;
+  
+}
+
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
-    /* Header */
-    nav {
-        display: block;
-        position: relative;
-        box-shadow: none;
-        width: fit-content;
-        padding-right: 1rem;
+  /* Header */
+  nav {
+    display: block;
+    position: relative;
+    box-shadow: none;
+    width: fit-content;
+    padding-right: 1rem;
+  }
 
-    }
-
-#menu {
-
+  #menu {
     display: flex;
-}
+  }
 
-#menu > li {
+  #menu > li {
+    padding-left: 1rem;
+  }
 
-padding-left: 1rem;
-
-}
-
-.nav-toggle-label {
-
+  .nav-toggle-label {
     display: none;
-}
+  }
 
-#logo {
-
+  #logo {
     font-size: 280%;
     line-height: 75px;
     margin: 0 0.5rem;
+  }
 
-}
+  /* Main content */
 
-/* Main content */
-
-main {
-
+  main {
     /* Push content down to accomodate larger header */
     margin-top: 79px;
-
-}
+  }
 }
 /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
-    #menu a:hover{
-        border-bottom: 1px solid #3a3a3a;
-    }
+  #menu a:hover {
+    border-bottom: 1px solid #3a3a3a;
+  }
 }
