styled gallery images responsively with column counts

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,6 +221,21 @@ color: #fafafa;
   padding: 5%;
   color: #3a3a3a;
 }
+/* Media query: large or landscape phones (576px and up) */
+
+@media screen and (min-width: 570px){
+
+  #photos {
+
+    column-count: 2;
+    column-gap: 0;
+  }
+
+}
+
+
+
+
 
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
@@ -280,6 +295,15 @@ color: #fafafa;
         text-align: end;
         align-self: flex-end;
     }
+
+/* Gallery */
+
+#photos {
+
+  column-count: 3;
+}
+
+
 }
 
 /* Large devices (laptops and desktops, 992px and up) */
@@ -287,6 +311,15 @@ color: #fafafa;
   #menu a:hover {
     border-bottom: 1px solid #3a3a3a;
   }
+/* Gallery */
+
+#photos {
+
+  column-count: 4;
+}
+
+
+}
 @media screen and (min-width: 1200px) {    
     /* Reasons section */
     #benefits {
@@ -315,4 +348,4 @@ color: #fafafa;
     }
 
 }
-}
+
